# rusty-tetris

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
binaries/: release_tetris
engine/: Cargo.toml
engine/src/: interface.rs  lib.rs
game/: Cargo.toml
game/src/: lib.rs
matrix/: Cargo.toml
matrix/src/: lib.rs
pieces/: Cargo.toml
pieces/src/: lib.rs  tetromino.rs
tetris/: Cargo.toml
tetris/src/: main.rs
vecmath/: Cargo.toml
vecmath/src/: coordinates.rs  lib.rs  rotation.rs
