[package]
name = "matrix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Internal dependencies
vecmath.workspace = true
pieces.workspace = true

# External dependencies
sdl2.workspace = true
